Finished header with new font, added common.css and about.html

--- a/why-gpt3-can-understand-things.html
+++ b/why-gpt3-can-understand-things.html
@@ -1,14 +1,7 @@
 <head>
 <title>Why GPT-3 Can Understand Things</title>
+<link rel="stylesheet" href="common.css">
 <style>
-body {
-    font-family: Book Antiqua, SegoeUI, Segoe UI, serif;
-    font-size: 17px;
-    margin: 0;
-}
-a {
-    color: orangered;
-}
 section ul {
     list-style: none;
     text-align: left;
@@ -27,14 +20,6 @@ div.quote {
     font-size: 16px;
     margin-left: 1em;
 }
-div.wrapper {
-    margin: 0 auto;
-    max-width: 90%;
-    line-height: 1.5;
-    width: 50em;
-    text-align: justify;
-    padding: 0.5em 0;
-}
 p:target {
     background-color: #eaf3ff;
 }
@@ -45,6 +30,13 @@ section.black {
 </style>
 </head>
 <body>
+
+<header>
+<div>
+<a class="logo" href="index.html">MagusDei</a>
+<a href="about.html">About</a>
+</div>
+</header>
 
 <section>
 <div class="wrapper">
