--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <head>
 <title>MagusDei's blog</title>
+<link rel="stylesheet" href="common.css">
+<style>
+a {
+    text-decoration: none;
+}
+a, h2, p {
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    font-family: Calibri, sans-serif;
+}
+p.date {
+    color: gray;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+</style>
 </head>
 <body>
-<div id="wrapper" style="margin: 0 auto;max-width: 90%;font-size: 16px;line-height: 1.5;width: 50em;">
-<h1>Lorem ipsum</h1>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<header>
+<div>
+<a class="logo" href="index.html">MagusDei</a>
+<a href="about.html">About</a>
+</div>
+</header>
+
+<div class="wrapper">
+<ul>
+<li>
+<a href="why-gpt3-can-understand-things.html">
+<h2>Why GPT-3 can understand things</h2>
+</a>
+<p class="date">2nd October, 2020</p>
+<p>Why I believe it is correct to say that GPT-3 actually "understands" things.</p>
+</li>
+</ul>
 </div>
 </body>
