--- a/about.html
+++ b/about.html
@@ -81,7 +81,10 @@ Q@@@@@@@@@@@@@@@@@##QQQQQB#@@@@@@@@@@@@@@@@@@@@@@@@@@@@#8dWWWWWGGGGGGGGGWqXr_
 @@@@@@@@@@@@@@@@@@####BQQ#gRQQQQQQQQQQQQQQQQQQQQBB$EQQ0WbQQQQQQQQdWWWO#@BMGWGG</pre>
 
 <p>It seems this blogger prefers to keep an aura of mystery around themselves...</p>
-<p>E-mail me at magusdei (at) protonmail.com</p>
+<p>E-mail me at <span id="mail">magusdei (at) protonmail.com</span></p>
 
 </div>
+
+<script data-goatcounter="https://mdgoats.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
