--- a/why-gpt3-can-understand-things.html
+++ b/why-gpt3-can-understand-things.html
@@ -209,4 +209,6 @@ section.black {
 </div>
 </section>
 
+<script data-goatcounter="https://mdgoats.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
