--- a/index.html
+++ b/index.html
@@ -40,4 +40,6 @@ ul {
 </li>
 </ul>
 </div>
+<script data-goatcounter="https://mdgoats.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
