--- a/about.html
+++ b/about.html
@@ -85,6 +85,15 @@ Q@@@@@@@@@@@@@@@@@##QQQQQB#@@@@@@@@@@@@@@@@@@@@@@@@@@@@#8dWWWWWGGGGGGGGGWqXr_
 
 </div>
 
+<script>
+mail_element = document.getElementById("mail");
+mail_text = mail_element.textContent.replace(" (at) ", "@");
+a_element = document.createElement("a");
+a_element.setAttribute("href", "mailto:"+mail_text);
+a_element.textContent = mail_text;
+mail_element.textContent = "";
+mail_element.appendChild(a_element);
+</script>
 <script data-goatcounter="https://mdgoats.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
