Added doctype, html, more information in head

--- a/about.html
+++ b/about.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>About MagusDei</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+<meta name="description" content="Contact information for MagusDei.">
+<link rel="canonical" href="https://magusdei.com/about.html">
 <link rel="stylesheet" href="common.css">
 <style>
 a {
@@ -97,3 +103,4 @@ mail_element.appendChild(a_element);
 <script data-goatcounter="https://mdgoats.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
+</html>
