--- a/why-gpt3-can-understand-things.html
+++ b/why-gpt3-can-understand-things.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>Why GPT-3 Can Understand Things</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+<meta name="description" content="Why I believe it's correct to say that GPT-3 can actually understand things, Author: MagusDei">
+<link rel="canonical" href="https://magusdei.com/about.html">
 <link rel="stylesheet" href="common.css">
 <style>
 section ul {
@@ -212,3 +218,4 @@ section.black {
 <script data-goatcounter="https://mdgoats.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
+</html>
