--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>MagusDei's blog</title>
+<meta charset="utf-8">
+<title>MagusDei's Blog</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+<meta name="description" content="A blog with musings on technology, philosophy, self-experimentation et cetera.">
+<link rel="canonical" href="https://magusdei.com/about.html">
 <link rel="stylesheet" href="common.css">
 <style>
 a {
@@ -43,3 +49,4 @@ ul {
 <script data-goatcounter="https://mdgoats.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
+</html>
