Changed div to nav in page header

--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@ pre {
 </head>
 <body>
 <header>
-<div>
+<nav>
 <a class="logo" href="index.html">MagusDei</a>
 <a href="about.html">About</a>
-</div>
+</nav>
 </header>
 
 <div class="wrapper" style="text-align: center;">
