--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ ul {
 </head>
 <body>
 <header>
-<div>
+<nav>
 <a class="logo" href="index.html">MagusDei</a>
 <a href="about.html">About</a>
-</div>
+</nav>
 </header>
 
 <div class="wrapper">
