--- a/why-gpt3-can-understand-things.html
+++ b/why-gpt3-can-understand-things.html
@@ -38,10 +38,10 @@ section.black {
 <body>
 
 <header>
-<div>
+<nav>
 <a class="logo" href="index.html">MagusDei</a>
 <a href="about.html">About</a>
-</div>
+</nav>
 </header>
 
 <section>
