Fix ASCII art font size for small screens

--- a/about.html
+++ b/about.html
@@ -36,6 +36,13 @@ pre {
     line-height: 7px;
 }
 
+@media (max-width: 350px) {
+    pre {
+        font-size: 1.5vw;
+        line-height: 1.5vw;
+    }
+}
+
 </style>
 </head>
 <body>
