Fixed canonical rels

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>MagusDei's Blog</title>
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 <meta name="description" content="A blog with musings on technology, philosophy, self-experimentation et cetera.">
-<link rel="canonical" href="https://magusdei.com/about.html">
+<link rel="canonical" href="https://magusdei.com/index.html">
 <link rel="stylesheet" href="common.css">
 <style>
 a {
